kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: ecommerce-ingress

  namespace: ecommerce

spec:

  ingressClassName: nginx

  rules:

    - http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: nginx-service

                port:

                  number: 80
